--- a/etc/Exam/main.html
+++ b/etc/Exam/main.html
@@ -6,6 +6,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+  
+  
 </head>
 <body>
   <div class="container">
@@ -15,45 +18,60 @@
             <li>HOME</li>
             <li>ABOUT</li>
             <li>PRODUCTS</li>
-            <li>CONTACT</li>
+            <a href="/reg_tool.html" style="text-decoration: none; color: black;">
+              <li>CONTACT</li>
+            </a>
           </ul>
-        </div>
-          <input type="text">
+        </div class="seachForm">
+          <div>
+            <input type="text" name="search">
+            <i class="bi bi-search"></i>
+          </div>
       </div>
       <div class="stContent">
-        <div>
-          <input type="image" src="slide1.jpg">
-          <h2>DELICIOUS MEALS</h2>
+        <div class="slide"></div>
+        <div class="conetentText">
+          <h1>DELICIOUS MEALS</h1>
+          <p>
+            Donec justo dui, semper vitae aliquam euzali, ornare pretium enim. Maecenas molestie diam eget tellus luctus fermentum.
+          </p>
+          <input type="button" value="SHOP NOW">
         </div>
-        <div>
-          Donec justo dui, semper vitae aliquam euzali, ornare pretium enim. Maecenas molestie diam eget tellus luctus fermentum.
-        </div>
-        <input type="button" value="SHOP NOW">
       </div>
       <div class="stIntro">
         <div>
           <h2>Free WebSite Templates</h2>
           <input type="image" src="under-heading.png">
         </div>
-        <div class="rule">
-          <div>
-            <div></div>
-            <h3>MAKE AN ORDER</h3>
-          </div>
-          <div>
-            <div></div>
-            <h3>PROMOTIONS</h3>
-          </div>
-          <div>
-            <div></div>
-            <h3>READY TO SERVE</h3>
-          </div>
-          <div>
-            <div></div>
-            <h3>SATISFACTION</h3>
+          <div class="rule">
+            <div class="cover">
+              <div class="icon">
+                <i class="fa fa-pencil"></i>
+              </div>
+              <h3>MAKE AN ORDER</h3>
+            </div>
+            <div class="cover">
+              <div class="icon">
+                <i class="fa fa-bullhorn"></i>
+              </div>
+              <h3>PROMOTIONS</h3>
+            </div>
+            <div class="cover">
+              <div class="icon">
+                <i class="fa fa-bell"></i>
+              </div>
+              <h3>READY TO SERVE</h3>
+            </div>
+            <div class="cover">
+              <div class="icon">
+                <i class="fa fa-heart"></i>
+              </div>
+              <h3>SATISFACTION</h3>
+            </div>
           </div>
         </div>
-      </div>
+      
+
       <div class="stTail">
         <div>
           <h2>Latest blog Posts</h2>
@@ -61,19 +79,25 @@
         </div>
         <div class="blog">
           <div>
-            <input type="image" src="blogpost1.jpg">
-            <p>SUMMER SANDWICH</p>
-            <p>29 SEP 2084</p>
+            <img src="blogpost1.jpg" alt="">
+            <div>
+              <p>SUMMER SANDWICH</p>
+              <p>29 SEP 2084</p>
+            </div>
           </div>
           <div>
-            <input type="image" src="blogpost2.jpg">
-            <p>NEW GREAT TASTE</p>
-            <p>23 Sep 2084</p>
+            <img src="blogpost2.jpg" alt="">
+            <div>
+              <p>NEW GREAT TASTE</p>
+              <p>23 Sep 2084</p>
+            </div>
           </div>
           <div>
-            <input type="image" src="blogpost3.jpg">
-            <p>SPICY PIZZA</p>
-            <p>14 Sep 2084</p>
+            <img src="blogpost3.jpg" alt="">
+            <div>
+              <p>SPICY PIZZA</p>
+              <p>14 Sep 2084</p>
+            </div>
           </div>
         </div>
       </div>      
