--- a/etc/Exam/main.html
+++ b/etc/Exam/main.html
@@ -23,10 +23,10 @@
               <li>CONTACT</li>
             </a>
           </ul>
-        </div class="seachForm">
-          <div>
+        </div>
+          <div class="seachForm">
             <input type="text" name="search">
-            <i class="bi bi-search"></i>
+            <i class="fa fa-search"></i>
           </div>
       </div>
       <div class="stContent">
@@ -50,24 +50,44 @@
                 <i class="fa fa-pencil"></i>
               </div>
               <h3>MAKE AN ORDER</h3>
+              <div class="textbox">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Morbi ut diam ac dui pellentesque varius.</p>
+                <p>Sed suscipit massa et metus malesuada consequat.</p>
+              </div>
             </div>
             <div class="cover">
               <div class="icon">
                 <i class="fa fa-bullhorn"></i>
               </div>
               <h3>PROMOTIONS</h3>
+              <div class="textbox">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Morbi ut diam ac dui pellentesque varius.</p>
+                <p>Sed suscipit massa et metus malesuada consequat.</p>
+              </div>
             </div>
             <div class="cover">
               <div class="icon">
                 <i class="fa fa-bell"></i>
               </div>
               <h3>READY TO SERVE</h3>
+              <div class="textbox">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Morbi ut diam ac dui pellentesque varius.</p>
+                <p>Sed suscipit massa et metus malesuada consequat.</p>
+              </div>
             </div>
             <div class="cover">
               <div class="icon">
                 <i class="fa fa-heart"></i>
               </div>
               <h3>SATISFACTION</h3>
+              <div class="textbox">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Morbi ut diam ac dui pellentesque varius.</p>
+                <p>Sed suscipit massa et metus malesuada consequat.</p>
+              </div>
             </div>
           </div>
         </div>
